<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_gray"
        android:textAlignment="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="412dp"
            android:layout_height="230dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="182dp"
                android:layout_marginTop="77dp"
                android:layout_marginEnd="182dp"
                android:contentDescription="@string/default_image_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_camera_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="66dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="66dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/default_image_text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="376dp"
            android:layout_height="334dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="117dp"
            android:background="@drawable/layout_rounded_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="306dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/default_business_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="21sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="29dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/default_business_name"
                android:textAlignment="center"
                android:textColor="@color/main_red"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/editBtn1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/editBtn1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/img_edit_restaurant_name_icon"
                android:contentDescription="@string/modify_business_name"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>