<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment_add_publications">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_gray">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="371dp"
                android:layout_height="146dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/layout_rounded_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="23dp"
                    android:fontFamily="@font/roboto_bold"
                    android:labelFor="@id/eventNameET"
                    android:text="@string/event_name_label"
                    android:textColor="@color/main_red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/eventNameET"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/eventNameET"
                    android:layout_width="285dp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="39dp"
                    android:background="@drawable/layout_rounded_item"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout6"
                android:layout_width="371dp"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/layout_rounded_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="Ubicación del evento"
                    android:textColor="@color/main_red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ubicationSelectedTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="Sin ubicación seleccionada"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="62dp"
                    android:layout_height="72dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/add_location_icon"
                    app:layout_constraintBottom_toTopOf="@+id/ubicationSelectedTV"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="371dp"
                android:layout_height="146dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/layout_rounded_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Horario"
                    android:textColor="@color/main_red"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="369dp"
                    android:layout_height="82dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10">

                    <Button
                        android:id="@+id/startBtn"
                        android:layout_width="127dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginEnd="60dp"
                        android:layout_marginBottom="11dp"
                        android:background="@drawable/layout_rounded_item"
                        android:contentDescription="@string/start_date_desc"
                        android:fontFamily="@font/roboto"
                        android:text="@string/start_date_default_text"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/endBtn"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/endBtn"
                        android:layout_width="126dp"
                        android:layout_height="58dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="11dp"
                        android:background="@drawable/layout_rounded_item"
                        android:contentDescription="@string/end_date_desc"
                        android:fontFamily="@font/roboto"
                        android:text="@string/end_date_defualt_text"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/createBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto"
                android:text="Crear"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</ScrollView>